--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -13,6 +13,11 @@
   --btn-text-color: #f3f3f3;
 }
 
+html,body {
+  box-sizing: border-box;
+  border: 1px solid rgb(80, 223, 241);
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -36,6 +41,30 @@ button:hover {
   background-color: var(--btn-hover-color);
 }
 
+header {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+  'navbar navbar'
+  'page-title .';
+
+  background: url(../assets/header-bg.png) no-repeat center;
+  background-size: cover;
+}
+/*
+--------------------------------
+-------- REUSABLE CSS --------
+--------------------------------
+*/
+
+.sectionTitle {
+  font-size: 50px;
+  text-align: center;
+}
+
 /*
 --------------------------------
 -------- HEADER SECTION --------
@@ -46,6 +75,7 @@ button:hover {
 ----- NAVBAR------
 */
 .navbar {
+  grid-area: navbar;
   display: grid;
   grid-template-columns: .5fr 1fr;
   font-size: 24px;
@@ -64,34 +94,13 @@ button:hover {
 }
 
 /*
------ HEADER BACKGROUND ------
-*/
-
-.headerBG {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background-color: blue;
-  background-size: cover;
-  width: 100%;
-}
-
-.headerBG img{
-  width: 100%;
-  max-height: 100vh;
-}
-
-/*
 ----- HEADER TITLE -----
 */
 
-.headerTitle {
-  display: grid;
-  grid-template-columns: 1.04fr 1fr;
-  grid-template-rows: 1fr;
+.pageTitle {
+  grid-area: page-title;
+  position: relative;
   font-size: 35px;
-  height: auto;
-  margin-top: 100px;
-  justify-items: center;
+  justify-self: center;
+  margin-top: 150px;
 }
