--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -6,11 +6,22 @@
 -------- GLOBAL SECTION --------
 --------------------------------
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 :root {
   --accent-color: #ff8a47;
+  
   --btn-hover-color: #e77e41;
   --btn-text-color: #f3f3f3;
+
+  --textbox-bg-color: #f9f8f8;
+  --textbox-outline-color: #9f9f9f;
+
+  --border-bottom-size: 2px;
+
 }
 
 html,body {
@@ -25,7 +36,7 @@ a {
 }
 
 a:hover {
-  border-bottom: 4px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
 }
 
 button {
@@ -33,8 +44,10 @@ button {
   color: var(--btn-text-color);
   background-color: var(--accent-color);
   width: auto;
-  height: 50px;
+  height: auto;
   cursor: pointer;
+  padding: 15px;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -54,14 +67,35 @@ header {
   background: url(../assets/header-bg.png) no-repeat center;
   background-size: cover;
 }
+
+section {
+  margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  row-gap: 50px;
+  justify-items: center;
+}
 /*
 --------------------------------
--------- REUSABLE CSS --------
+-------- CUSTOM/REUSABLE CSS --------
 --------------------------------
 */
 
 .sectionTitle {
   font-size: 50px;
+  border-bottom: 2px solid var(--accent-color);
+  padding-bottom: 5px;
+  padding: 0 5px;  
+}
+
+.textbox {
+  background-color: var(--textbox-bg-color);
+  border: 2px solid var(--textbox-outline-color);
+  line-height: 1.5em;
+  border-radius: 5px;
+  padding: 20px;
+  max-width: 50%;
   text-align: center;
 }
 
@@ -99,8 +133,38 @@ header {
 
 .pageTitle {
   grid-area: page-title;
-  position: relative;
-  font-size: 35px;
-  justify-self: center;
-  margin-top: 150px;
+  text-align: left;
 }
+
+.pageTitle div {
+  display: grid;
+  grid-template-columns: 1fr;
+  font-size: 200%;
+  justify-items: start;
+  margin-top: 20%;
+  margin-left: 25%;
+  row-gap: 30%;
+}
+
+/*
+--------------------------------
+-------- ABOUT SECTION --------
+--------------------------------
+*/
+
+/* .aboutSection {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  row-gap: 50px;
+  justify-items: center;
+} */
+
+/*
+-------------------------------------
+--------  TECHNOLOGY SECTION --------
+-------------------------------------
+*/
+
+
+
