--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid rgb(80, 223, 241);
+  /* border: 1px solid rgb(80, 223, 241); */
 }
 
 :root {
@@ -105,6 +105,9 @@ section:nth-child(odd) {
   text-align: center;
 }
 
+/*
+----- CARD BASE ------
+*/
 .cards {
   display: flex;
   flex-direction: row;
@@ -113,29 +116,120 @@ section:nth-child(odd) {
   width: 100%;
 } 
 
-.card {
-  display: grid;
-  grid-template-rows: 70px 50px auto;
-  row-gap: 10px;
-  background-color: #fefdfd;
+.cardBase {
+  position: relative;
   border: 3px solid #9f9f9f;
   border-radius: 8px;
-  width: 250px;
+  width: 255px;
   height: 330px;
   text-align: center;
   padding: 10px 0;
 }
 
+/*
+----- TECH CARDS ------
+*/
+.techCard {
+  display: grid;
+  grid-template-rows: 70px 50px auto;
+  row-gap: 10px;
+  background-color: #fefdfd;
+}
+
 /*TEMPORARY - TODO: REPLACE WITH IMG*/
-.card h1 {
+.techCard h1 {
   font-size: 300%;
 }
 
-.card ul {
+.techCard ul {
   list-style-type: none;
   grid-template-rows: 30px 30px 30px;
   margin: auto 0;
   display: grid;
+}
+
+/*
+----- POJECT CARDS ------
+*/
+.projectCard {
+  background-color: #f3f3f3;
+  padding: 0;
+  width: 300px;
+  height: 400px;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 128.47px 1fr;
+  align-items: center;
+  justify-content: start;
+}
+
+.cardHeader {
+  display: flex;
+  position: relative;
+  top:0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  color: white;
+  justify-content: center;
+  z-index: 999;
+}
+
+.cardHeader h1 {
+  z-index: 999;
+}
+
+.cardHeader img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.projectCardBG {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.projectCardBG img {
+  height: 100%;
+  position: absolute;
+}
+
+.projectCardText {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  row-gap: 50px;
+
+  position: absolute;
+  font-size: 150%;
+  color: white;
+  z-index: 999;
+}
+
+.projectCardText a {
+  color: var(--btn-hover-color);
+  max-width: 110px;
+  margin: 0 auto;
+}
+
+
+/*
+----- SHADOW BOX ------
+*/
+
+.shadowBox {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(65, 65, 65, 90%);
+  z-index: 999;
 }
 
 /*
