--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -24,6 +24,7 @@
 
   --border-bottom-size: 2px;
 
+  --shadow-color: rgba(65, 65, 65, 90%);
 }
 
 a {
@@ -222,7 +223,7 @@ section:nth-child(odd) {
   position: absolute;
   font-size: 150%;
   color: white;
-  z-index: 999;
+  z-index: 1;
 
   /* animation: fadein 2s; */
 }
@@ -231,6 +232,7 @@ section:nth-child(odd) {
   color: var(--btn-hover-color);
   max-width: 110px;
   margin: 0 auto;
+  cursor: pointer;
 }
 
 /*
@@ -241,27 +243,37 @@ section:nth-child(odd) {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(65, 65, 65, 90%);
-  z-index: 999;
+  background-color: var(--shadow-color);
+  z-index: 1;
 
-  /* animation: fadein 2s; */
 }
 
 /*
------ ANIMATIONS ------
+----- Modal ------
 */
-
-@keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+.modalShadow {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--shadow-color);
+  z-index: 999;
 }
 
-@keyframes fadeout {
-  from { opacity: 1; }
-  to   { opacity: 0; }
+.modal {
+  position: absolute;
+  width: 60vw;
+  height: 500px;
+  background-color: var(--textbox-bg-color);
+  z-index: 999;
+  transform: translate(0, -40px);
+  border: 4px solid var(--textbox-outline-color);
+  border-radius: 5px;
 }
-
-
 
 /*
 --------------------------------
@@ -315,14 +327,6 @@ section:nth-child(odd) {
 -------- ABOUT SECTION --------
 --------------------------------
 */
-
-/* .aboutSection {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  row-gap: 50px;
-  justify-items: center;
-} */
 
 /*
 -------------------------------------
