Modal animation fade in/out has been implemented.

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -275,6 +275,10 @@ section:nth-child(odd) {
   border-radius: 5px;
 }
 
+.activeModal {
+  display: flex;
+}
+
 /*
 --------------------------------
 -------- HEADER SECTION --------
