Modal slideshow and descriptions have been created. Missing the X close button.

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -147,13 +147,13 @@
   font-size: 150%;
   color: white;
   z-index: 1;
-
-  /* animation: fadein 2s; */
+  text-align: center;
+  width: 100%;
 }
 
 .projectCardText a {
-  color: var(--btn-hover-color);
-  max-width: 110px;
+  color: var(--btn-hover-color) !important;
+  width: auto;
   margin: 0 auto;
   cursor: pointer;
 }
@@ -174,6 +174,7 @@
 /*
 ----- Modal ------
 */
+
 .modalShadow {
   display: flex;
   position: fixed;
@@ -189,13 +190,36 @@
 
 .modal {
   position: absolute;
-  width: 80vw;
-  height: 600px;
+  width: 50%;
+  min-width: 500px;
+  height: 714px;
   background-color: var(--textbox-bg-color);
   z-index: 999;
-  transform: translate(0, -40px);
+  transform: translate(0, -20px);
   border: 4px solid var(--textbox-outline-color);
   border-radius: 5px;
+}
+
+.modalContent {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.infoBox {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin: 10px;
+}
+
+.infoBox h5 {
+  color: #858484;
+}
+
+.infoBox hr {
+  background-color: #858484;
 }
 
 .activeModal {
