--- a/src/global.css
+++ b/src/global.css
@@ -3,111 +3,135 @@
 -------- GLOBAL SECTION --------
 --------------------------------
 */
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      /* border: 1px solid rgb(80, 223, 241); */
-  }
-  
-  :root {
-  --accent-color: #ff8a47;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* border: 1px solid rgb(80, 223, 241); */
+}
 
-  --btn-hover-color: #e77e41;
-  --btn-text-color: #f3f3f3;
+:root {
+--accent-color: #ff8a47;
 
-  --textbox-bg-color: #f9f8f8;
-  --textbox-outline-color: #858484;
+--btn-hover-color: #e77e41;
+--btn-text-color: #f3f3f3;
 
-  --border-bottom-size: 2px;
+--textbox-bg-color: #f9f8f8;
+--textbox-outline-color: #858484;
 
-  --shadow-color: rgba(65, 65, 65, 90%);
+--border-bottom-size: 2px;
 
-  }
+--shadow-color: rgba(65, 65, 65, 90%);
 
-  html, body {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 15px;
-  }
+}
 
-  /*----HEADERS-----*/
-  h1,h2,h3,h4,h5,h6 {
-      margin: 0;
-      padding: 0;
-  }
+html, body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
 
-  h1 {
-    font-size: 4rem;
-  }
+/*----HEADERS-----*/
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+    padding: 0;
+}
 
-  h2 {
-    font-size: 3rem;
-  }
+h1 {
+  font-size: 4rem;
+}
 
-  h3 {
-      font-size: 2.6rem;
-  }
+h2 {
+  font-size: 3rem;
+}
 
-  h4 {
-      font-size: 1.6rem;
-  }
+h3 {
+    font-size: 2.6rem;
+}
 
-  header {
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    min-height: 600px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
-    grid-template-areas:
-    'navbar navbar'
-    'page-title .';
-  
-    background: url(../src/assets/header-bg.png) no-repeat center;
-    background-size: cover;
-  }
+h4 {
+    font-size: 1.6rem;
+}
 
-  section {
-    padding: 100px 0;
-  }
-  
-  section:nth-child(odd) {
-    background-color: #eef3f5;
-  }
+header {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  min-height: 600px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+  'navbar navbar'
+  'page-title .';
 
-  /*----LINKS----*/
-  a {
-    text-decoration: none;
-    color: black;
-    padding-bottom: 5px;
-  }
-  
-  a:hover {
-    color: black;
-    text-decoration: none;
-    border-bottom: 2px solid var(--accent-color);
-    transition: border-bottom 0.2s;
-  }
-  
-  button {
-    font-size: 120%;
-    color: var(--btn-text-color);
-    background-color: var(--accent-color);
-    width: auto;
-    height: auto;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  
-  button:hover {
-    background-color: var(--btn-hover-color);
-  }
+  background: url(../src/assets/header-bg.png) no-repeat center;
+  background-size: cover;
+}
 
-  hr {
-    background-color: #000;
-    padding: 1px;
-    width: 100%;
-  }
+section {
+  padding: 100px 0;
+}
 
+section:nth-child(odd) {
+  background-color: #eef3f5;
+}
+
+/*----LINKS----*/
+a {
+  text-decoration: none;
+  color: black;
+  padding-bottom: 5px;
+}
+
+a:hover {
+  color: black;
+  text-decoration: none;
+  border-bottom: 2px solid var(--accent-color);
+  transition: border-bottom 0.2s;
+}
+
+button {
+  font-size: 120%;
+  color: var(--btn-text-color);
+  background-color: var(--accent-color);
+  width: auto;
+  height: auto;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: var(--btn-hover-color);
+}
+
+hr {
+  background-color: #000;
+  padding: 1px;
+  width: 100%;
+}
+
+/*
+--------------------------------
+-------- BOOTSTRAP SECTION --------
+--------------------------------
+*/
+
+/*----CAROUSEL----*/
+.carousel-indicators li {
+  background-color: var(--accent-color);
+}
+
+a.carousel-control-next,
+a.carousel-control-prev {
+  background-color: #5c5959a8;
+  height: 15%;
+  top: 382.5px;
+  border: 0;
+}
+
+a.carousel-control-next:hover,
+a.carousel-control-prev:hover  {
+  background-color: #4d4b4be0;
+  border: 0;
+}
