--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -34,13 +34,16 @@
   display: grid;
   grid-template-columns: .5fr 1fr;
   font-size: 100%;
+  background-color: none;
+  transition: background-color .3s;
 }
 
 .stickyNavbar {
   position: fixed;
   width: 100%;
-  z-index: 999;
+  z-index: 999; 
   background-color: white;
+  transition: background-color .3s;
 }
 
 .navbar img {
