--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -389,4 +389,16 @@ a.closeBtn:not([href]):not([tabindex]):hover {
 .socialLink {
   width: 50px;
   height: 50px;
+  transition: color .3s;
+}
+
+.socialLink:hover {
+  border: none;
+  color: var(--accent-color);
+  transition: color .3s;
+}
+
+.socialLink ion-icon {
+  width: 100%;
+  height: 100%;
 }
