--- a/src/global.css
+++ b/src/global.css
@@ -55,7 +55,7 @@ h4 {
 header {
   position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   min-height: 600px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -169,4 +169,10 @@ a.carousel-control-next:hover,
 a.carousel-control-prev:hover  {
   background-color: #4d4b4be0;
   border: 0;
+}
+
+/*TESTING*/
+
+.navbar {
+  background-color: green;
 }
