--- a/src/global.css
+++ b/src/global.css
@@ -57,12 +57,6 @@ header {
   height: 100vh;
   width: 100%;
   min-height: 600px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 1fr;
-  grid-template-areas:
-  'navbar navbar'
-  'page-title .';
 
   background: url(../src/assets/header-bg.png) no-repeat center;
   background-size: cover;
@@ -99,6 +93,10 @@ button {
   cursor: pointer;
   padding: 10px;
   border-radius: 5px;
+}
+
+button:focus {
+  outline:0;
 }
 
 button:hover {
@@ -169,10 +167,4 @@ a.carousel-control-next:hover,
 a.carousel-control-prev:hover  {
   background-color: #4d4b4be0;
   border: 0;
-}
-
-/*TESTING*/
-
-.navbar {
-  background-color: green;
 }
