--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -95,7 +95,8 @@ a.button:hover,
 .pageTitle {
   position: absolute;
   text-align: left;
-  margin: 150px 0 130px 7%;
+  left: 15%;
+  margin-top: 150px;
 }
 
 .pageTitle div {
