--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -11,7 +11,7 @@
   grid-template-rows: auto;
   row-gap: 50px;
   justify-items: center;
-  margin: 0 10%;
+  margin: 0 120px;
 }
 
 .sectionTitle {
@@ -96,7 +96,7 @@ a.button:hover,
   position: absolute;
   text-align: left;
   left: 15%;
-  margin-top: 150px;
+  margin-top: 200px;
 }
 
 .pageTitle div {
@@ -118,8 +118,8 @@ a.button:hover,
   line-height: 1.5em;
   border-radius: 5px;
   padding: 20px;
-  max-width: 60%;
-  min-width: 400px;
+  max-width: 50%;
+  min-width: 300px;
   text-align: center;
 }
 
@@ -158,7 +158,7 @@ a.button:hover,
   grid-template-rows: 70px 50px auto;
   row-gap: 10px;
   background-color: #fefdfd;
-  margin: 30px;
+  margin: 30px 53px;
 }
 
 /*TEMPORARY - TODO: REPLACE WITH IMG*/
@@ -290,7 +290,7 @@ a.button:hover,
 .modal {
   position: absolute;
   width: 50%;
-  min-width: 500px;
+  min-width: 400px;
   height: 714px;
   background-color: var(--textbox-bg-color);
   z-index: 999;
@@ -304,6 +304,11 @@ a.button:hover,
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+.carouselImg {
+  width: 100%;
+  height: 450px;
 }
 
 .infoBox {
@@ -429,8 +434,37 @@ a.closeBtn:not([href]):not([tabindex]):hover {
     justify-items: center;
   }
 
+  /*
+  --------------------------------
+  -------- CONTACT FORM QUERIES ---
+  --------------------------------
+  */
   .contactForm textarea {
     width: 50%;
+  }
+
+    /*
+  --------------------------------
+  -------- GENERAL SETUP QUERIES ---
+  --------------------------------
+  */
+  .container {
+    margin: 0 20px;
+  }
+
+     /*
+  --------------------------------
+  -------- PROJECTS SECTION QUERIES ---
+  --------------------------------
+  */
+
+  .modal {
+    height: 614px;
+  }
+
+  .carouselImg {
+    width: 100%;
+    height: 300px;
   }
   
 }
