Updated Portfolio Info
- Added Description for my first project card.
- Changed InfoBox component so that scrolling is possible on the modal textbox
- Modal can now open urls on new tabs.
- Added the url's to the state on the app.js file
- Created info box text area styling on css file.

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -326,6 +326,12 @@ a.button:hover,
   background-color: #858484;
 }
 
+.infoBox textarea {
+  width: 100%;
+  height: 100%;
+  resize: none;
+}
+
 .closeBtn {
   position: absolute;
   font-size: 170%;
@@ -465,6 +471,10 @@ a.closeBtn:not([href]):not([tabindex]):hover {
   .carouselImg {
     width: 100%;
     height: 300px;
+  }
+
+  .infoBox textarea {
+    height: 150px;
   }
   
 }
