--- a/src/global.css
+++ b/src/global.css
@@ -16,8 +16,8 @@
 --btn-hover-color: #e77e41;
 --btn-text-color: #f3f3f3;
 
---textbox-bg-color: #f9f8f8;
---textbox-outline-color: #858484;
+--textbox-bg-color: #fefdfd;
+--textbox-outline-color: #9f9f9f;
 
 --border-bottom-size: 2px;
 
