--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -29,14 +29,31 @@
 /*
 ----- NAVBAR------
 */
+header {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 115px calc(100vh - 115px);
+}
+
+.Navbar {
+  width: 100%;
+  height: 100%;
+}
+
 a.homeBtn {
   border: none;
   cursor: pointer;
+  height: 100px;
 }
 
 a.homeBtn:hover {
   border: none;
   cursor: pointer;
+}
+
+a.homeBtn img {
+  width: auto;
+  height: 100%;
 }
 
 .navbar {
@@ -96,7 +113,7 @@ a.button:hover,
   position: absolute;
   text-align: left;
   left: 15%;
-  margin-top: 200px;
+  top: 44%;
 }
 
 .pageTitle div {
@@ -448,10 +465,8 @@ a.closeBtn:not([href]):not([tabindex]):hover {
   }
 
   .pageTitle {
-    position: absolute;
     display: flex;
     justify-content: center;
-    margin-top: 150px;
     left: 0;
     right: 0;
   }
