--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -350,7 +350,7 @@ a.button:hover,
 .infoBox {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   margin: 10px;
   height: 280px;
 }
