Resume is now scrollable if the resume get's bigger.

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -148,7 +148,9 @@ a.button:hover,
 .resumeContainer {
   max-width: 600px;
   min-width: 300px;
-  height: auto;
+  overflow: hidden;
+  overflow-y: scroll;
+  height: 700px;
 }
 
 /*
