Added skate board gif

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -147,9 +147,8 @@ a.button:hover,
 
 .resumeContainer {
   max-width: 707px;
-  min-width: 300px;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow: scroll;
   height: 500px;
 }
 
