--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -1,3 +1,28 @@
+/*
+--------------------------------
+-- FIXED ELEMENTS SECTION ------
+--------------------------------
+*/
+.scrollToTopBtn {
+  position: fixed;
+  bottom: 2rem;
+  right: 1rem;
+  background-color: var(--accent-color);
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 900;
+}
+
+.scrollToTopBtn:hover {
+  border: 0;
+  background-color: var(--btn-hover-color);
+}
+
+.scrollToTopBtn ion-icon {
+  height: 40px;
+  width: 40px;
+}
+
 
 /*
 --------------------------------
@@ -147,7 +172,7 @@ a.button:hover,
 
 .resumeContainer {
   max-width: 707px;
-  overflow: hidden;
+  width: 100%;
   overflow: scroll;
   height: 500px;
 }
