Scroll to top button feature added. Fades in and out based on wether we are in the header section or not.

--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -23,6 +23,20 @@
   width: 40px;
 }
 
+.fadeIn {
+  opacity: 1;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+
+.fadeOut {
+  opacity: 0;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+
 
 /*
 --------------------------------
