--- a/src/global.css
+++ b/src/global.css
@@ -147,6 +147,16 @@ footer {
 
 /*
 --------------------------------
+-------- PDFViewer SECTION -----
+--------------------------------
+*/
+.react-pdf__Page__canvas {
+  width: 100% !important;
+  height: auto !important;
+}
+
+/*
+--------------------------------
 -------- BOOTSTRAP SECTION --------
 --------------------------------
 */
