--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -128,6 +128,7 @@ button.navbarMobileBtn:hover {
 
 a.button,
 .button {
+  border: none;
   font-size: 120%;
   color: var(--btn-text-color);
   background-color: var(--accent-color);
@@ -143,8 +144,6 @@ a.button:hover,
   background-color: var(--btn-hover-color);
   border: none;
 }
-
-
 
 /*
 ----- HEADER TITLE -----
@@ -261,12 +260,12 @@ a.button:hover,
 */
 
 .projectCards {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  justify-items: center;
   align-items: center;
   width: 100%;
-  flex-wrap: wrap;
 }
 
 .projectCard {
@@ -387,16 +386,29 @@ a.button:hover,
 }
 
 .carouselImgContainer {
+  position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
   background-color: black;
 }
 
+.carouselSlideBtn {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: calc(100%);
+  height: calc(100% - 15%); /* 15% is the height of the arrow elements in the modal */
+  border: none;
+  background-color: transparent;
+}
+
 .carouselImg {
-  max-width: 1080px;
+  max-width: 100%;
   height: 400px;
   margin: auto;
+  width: auto;
+  height: -webkit-fill-available;
 }
 
 .infoBox {
@@ -450,11 +462,6 @@ a.closeBtn:not([href]):not([tabindex]):hover {
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
-  padding: 10px;
-}
-
-.modalBtn {
-  font-size: 100%;
   padding: 10px;
 }
 
@@ -518,6 +525,12 @@ a.closeBtn:not([href]):not([tabindex]):hover {
 }
 /*Medium Size*/
 @media (max-width: 768px) {
+
+
+  .projectCards {
+    grid-template-columns: 1fr;
+  }
+  
 
   /*
   --------------------------------
