--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -10,7 +10,7 @@
   background-color: var(--accent-color);
   padding: 5px;
   border-radius: 5px;
-  z-index: 900;
+  z-index: 800;
 }
 
 .scrollToTopBtn:hover {
@@ -121,7 +121,7 @@ button.navbarMobileBtn:hover {
 .stickyNavbar {
   position: fixed;
   width: 100%;
-  z-index: 999; 
+  z-index: 900; 
   background-color: white;
   transition: background-color .3s;
 }
@@ -362,16 +362,17 @@ a.button:hover,
   width: 100%;
   height: 100%;
   background-color: var(--shadow-color);
-  z-index: 999;
+  z-index: 900;
 }
 
 .modal {
   position: absolute;
-  width: 50%;
+  max-width: 750px;
   min-width: 350px;
+  width: 100%;
   height: 714px;
   background-color: var(--textbox-bg-color);
-  z-index: 999;
+  z-index: 900;
   transform: translate(0, -20px);
   border: 4px solid var(--textbox-outline-color);
   border-radius: 5px;
@@ -387,9 +388,9 @@ a.button:hover,
 
 .carouselImgContainer {
   position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   background-color: black;
 }
 
@@ -404,11 +405,26 @@ a.button:hover,
 }
 
 .carouselImg {
-  max-width: 100%;
-  height: 400px;
-  margin: auto;
+  max-height: 397px;
+}
+
+.magnifyImg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: var(--shadow-color);
+  z-index: 999;
+}
+
+.magnifyImg img {
+  max-width: 80%;
+  max-height: 80%;
   width: auto;
-  height: -webkit-fill-available;
+  height: auto;
 }
 
 .infoBox {
@@ -441,7 +457,7 @@ a.button:hover,
   cursor: pointer;
   top: 3px;
   right: 7px;
-  z-index: 999;
+  z-index: 900;
   border: 0;
   padding: 3px;
 }
@@ -588,8 +604,7 @@ a.closeBtn:not([href]):not([tabindex]):hover {
     height: 614px;
   }
   .carouselImg {
-    width: 100%;
-    height: -webkit-fill-available;
+    height: 345px;
   }
   
 }
